add oauth proxy to both mlflow and airflow2

--- a/ml-workshop-mlflow/base/mlflow-dc.yaml
+++ b/ml-workshop-mlflow/base/mlflow-dc.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: mlflow
     spec:
+      serviceAccountName: mlflow-proxy
       initContainers:
         - name: waitkafka
           image: 'registry.access.redhat.com/rhscl/postgresql-96-rhel7:latest'
