--- a/ml-workshop-airflow2/base/route.yaml
+++ b/ml-workshop-airflow2/base/route.yaml
@@ -1,3 +1,12 @@
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: airflow2-proxy
+  annotations:
+    serviceaccounts.openshift.io/oauth-redirectreference.primary: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"ap-airflow2"}}'
+
+---
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
