--- a/ml-workshop-airflow2/base/service.yaml
+++ b/ml-workshop-airflow2/base/service.yaml
@@ -117,7 +117,7 @@ spec:
     - name: http
       port: 8080
       targetPort: http
-    - name: http
+    - name: internal
       port: 8888
       targetPort: internal
 
