add oauth proxy to both mlflow and airflow2

--- a/ml-workshop-airflow2/base/service.yaml
+++ b/ml-workshop-airflow2/base/service.yaml
@@ -116,10 +116,10 @@ spec:
   ports:
     - name: http
       port: 8080
-      targetPort: http
+      targetPort: 8080
     - name: internal
       port: 8888
-      targetPort: internal
+      targetPort: 8888
 
   selector:
     app.kubernetes.io/name: airflow
