--- a/ml-workshop-airflow2/base/route.yaml
+++ b/ml-workshop-airflow2/base/route.yaml
@@ -26,3 +26,8 @@ spec:
   port:
     targetPort: http
   wildcardPolicy: None
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: None
+
+
