no need for airflow 1

--- a/kfdef/kfctl_openshift_ml_workshop.yaml
+++ b/kfdef/kfctl_openshift_ml_workshop.yaml
@@ -133,11 +133,11 @@ spec:
           name: manifests
           path: ml-workshop-jenkins
       name: ml-jenkins
-    - kustomizeConfig:
-        repoRef:
-          name: manifests
-          path: ml-workshop-airflow
-      name: ml-airflow
+    # - kustomizeConfig:
+    #     repoRef:
+    #       name: manifests
+    #       path: ml-workshop-airflow
+    #   name: ml-airflow
     - kustomizeConfig:
         repoRef:
           name: manifests
