--- a/ml-workshop-airflow2/base/deployment.yaml
+++ b/ml-workshop-airflow2/base/deployment.yaml
@@ -407,7 +407,8 @@ spec:
       #         mountPath: /bitnami/postgresql
       containers:
         - name: app-aflow-postgresql
-          image: docker.io/bitnami/postgresql:10.7.0
+          image: registry.redhat.io/rhel8/postgresql-10:1-154
+          #docker.io/bitnami/postgresql:10.7.0
           imagePullPolicy: "Always"
           resources:
             requests:
@@ -416,8 +417,8 @@ spec:
           # securityContext:
           #   runAsUser: 1001
           env:
-            - name: PGDATA
-              value: "/bitnami/postgresql"
+            # - name: PGDATA
+            #   value: "/bitnami/postgresql"
             # - name: BITNAMI_DEBUG
             #   value: "false"
             # - name: POSTGRESQL_PORT_NUMBER
@@ -426,20 +427,36 @@ spec:
             #   value: "/bitnami/postgresql"
             # - name: PGDATA
             #   value: "/bitnami/postgresql/data"
-            - name: POSTGRES_POSTGRES_PASSWORD
+            # - name: POSTGRES_POSTGRES_PASSWORD
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: app-aflow-postgresql
+            #       key: postgresql-postgres-password
+            - name: POSTGRESQL_ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: app-aflow-postgresql
                   key: postgresql-postgres-password
-            - name: POSTGRES_USER
+
+            # - name: POSTGRES_USER
+            #   value: "bn_airflow"
+            - name: POSTGRESQL_USER
               value: "bn_airflow"
-            - name: POSTGRES_PASSWORD
+            # - name: POSTGRES_PASSWORD
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: app-aflow-postgresql
+            #       key: postgresql-password
+
+            - name: POSTGRESQL_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: app-aflow-postgresql
                   key: postgresql-password
-            - name: POSTGRES_DB
+            - name: POSTGRESQL_DATABASE
               value: "bitnami_airflow"
+            # - name: POSTGRES_DB
+            #   value: "bitnami_airflow"
             # - name: POSTGRESQL_ENABLE_LDAP
             #   value: "no"
             # - name: POSTGRESQL_ENABLE_TLS
@@ -487,7 +504,8 @@ spec:
             # - name: dshm
             #   mountPath: /dev/shm
             - name: aflow-data
-              mountPath: /bitnami/postgresql
+              # mountPath: /bitnami/postgresql
+              mountPath: /var/lib/pgsql/data
               # subPath:
       # volumes:
       #   - name: dshm
