--- a/ml-workshop-airflow2/base/deployment.yaml
+++ b/ml-workshop-airflow2/base/deployment.yaml
@@ -586,29 +586,30 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
         - name: redis
-          image: docker.io/bitnami/redis:6.2.5-debian-10-r11
+          image: registry.redhat.io/rhel8/redis-6:1-18
+          #docker.io/bitnami/redis:6.2.5-debian-10-r11
           imagePullPolicy: "Always"
-          command:
-            - /bin/bash
-          args:
-            - -c
-            - /opt/bitnami/scripts/start-scripts/start-master.sh
+          # command:
+          #   - /bin/bash
+          # args:
+          #   - -c
+          #   - /opt/bitnami/scripts/start-scripts/start-master.sh
           env:
-            - name: BITNAMI_DEBUG
-              value: "false"
-            - name: REDIS_REPLICATION_MODE
-              value: master
-            - name: ALLOW_EMPTY_PASSWORD
-              value: "no"
+            # - name: BITNAMI_DEBUG
+            #   value: "false"
+            # - name: REDIS_REPLICATION_MODE
+            #   value: master
+            # - name: ALLOW_EMPTY_PASSWORD
+            #   value: "no"
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: app-aflow-redis
                   key: redis-password
-            - name: REDIS_TLS_ENABLED
-              value: "no"
-            - name: REDIS_PORT
-              value: "6379"
+            # - name: REDIS_TLS_ENABLED
+            #   value: "no"
+            # - name: REDIS_PORT
+            #   value: "6379"
           ports:
             - name: redis
               containerPort: 6379
@@ -619,56 +620,62 @@ spec:
             timeoutSeconds: 6
             successThreshold: 1
             failureThreshold: 5
-            exec:
-              command:
-                - sh
-                - -c
-                - /health/ping_liveness_local.sh 5
+            tcpSocket: 
+              port: 6379
+            # exec:
+            #   command:
+            #     - sh
+            #     - -c
+            #     - /health/ping_liveness_local.sh 5
           readinessProbe:
             initialDelaySeconds: 20
             periodSeconds: 5
             timeoutSeconds: 2
             successThreshold: 1
             failureThreshold: 5
-            exec:
-              command:
-                - sh
-                - -c
-                - /health/ping_readiness_local.sh 1
+            tcpSocket: 
+              port: 6379
+
+            # exec:
+            #   command:
+            #     - sh
+            #     - -c
+            #     - /health/ping_readiness_local.sh 1
           resources:
             limits: {}
             requests: {}
           volumeMounts:
-            - name: start-scripts
-              mountPath: /opt/bitnami/scripts/start-scripts
-            - name: health
-              mountPath: /health
+            # - name: start-scripts
+            #   mountPath: /opt/bitnami/scripts/start-scripts
+            # - name: health
+            #   mountPath: /health
             - name: redis-data
-              mountPath: /data
+              # mountPath: /data
+              mountPath: /var/lib/redis/data
               subPath:
-            - name: config
-              mountPath: /opt/bitnami/redis/mounted-etc
-            - name: redis-tmp-conf
-              mountPath: /opt/bitnami/redis/etc/
-            - name: tmp
-              mountPath: /tmp
+            # - name: config
+            #   mountPath: /opt/bitnami/redis/mounted-etc
+            # - name: redis-tmp-conf
+            #   mountPath: /opt/bitnami/redis/etc/
+            # - name: tmp
+            #   mountPath: /tmp
 
       volumes:
-        - name: start-scripts
-          configMap:
-            name: app-aflow-redis-scripts
-            defaultMode: 0755
-        - name: health
-          configMap:
-            name: app-aflow-redis-health
-            defaultMode: 0755
-        - name: config
-          configMap:
-            name: app-aflow-redis-configuration
-        - name: redis-tmp-conf
-          emptyDir: {}
-        - name: tmp
-          emptyDir: {}
+        # - name: start-scripts
+        #   configMap:
+        #     name: app-aflow-redis-scripts
+        #     defaultMode: 0755
+        # - name: health
+        #   configMap:
+        #     name: app-aflow-redis-health
+        #     defaultMode: 0755
+        # - name: config
+        #   configMap:
+        #     name: app-aflow-redis-configuration
+        # - name: redis-tmp-conf
+        #   emptyDir: {}
+        # - name: tmp
+        #   emptyDir: {}
   volumeClaimTemplates:
     - metadata:
         name: redis-data
@@ -682,7 +689,7 @@ spec:
         resources:
           requests:
             storage: "8Gi"
-        storageClassName: gp2
+
 ---
 # Source: airflow/templates/worker/statefulset.yaml
 apiVersion: apps/v1
