--- a/ml-workshop-airflow2/base/route.yaml
+++ b/ml-workshop-airflow2/base/route.yaml
@@ -7,6 +7,15 @@ metadata:
     serviceaccounts.openshift.io/oauth-redirectreference.primary: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"ap-airflow2"}}'
 
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: airflow2-proxy
+  annotations:
+    kubernetes.io/service-account.name: airflow2-proxy
+type: kubernetes.io/service-account-token
+
+---
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
