disconnected-install: adding the radanalytics, seldon and odh main operator details

--- a/odh-dashboard/overlays/custom-image/custom-image-dc.yaml
+++ b/odh-dashboard/overlays/custom-image/custom-image-dc.yaml
@@ -7,4 +7,4 @@ spec:
     spec:
       containers:
       - name: odh-dashboard
-        image: quay.io/opendatahub/odh-dashboard:v1.0
+        image: $(ODH_DASHBOARD_IMAGE)
