--- a/superset/overlays/custom-image/custom-image-dc.yaml
+++ b/superset/overlays/custom-image/custom-image-dc.yaml
@@ -22,4 +22,4 @@ spec:
     spec:
       containers:
       - name: postgresql
-        image: "quay.io/internaldatahub/postgresql-96-centos7:9.6"
+        image: $(SUPERSET_DB_IMAGE)
