--- a/superset/overlays/custom-image/params.env
+++ b/superset/overlays/custom-image/params.env
@@ -1,1 +1,2 @@
-YOUR_IMAGE=none
+SUPERSET_IMAGE=quay.io/internaldatahub/superset:1.1.0
+SUPERSET_DB_IMAGE=quay.io/internaldatahub/postgresql-96-centos7:9.6
