--- a/superset/overlays/custom-image/kustomization.yaml
+++ b/superset/overlays/custom-image/kustomization.yaml
@@ -7,14 +7,21 @@ patchesStrategicMerge:
 configurations:
   - params.yaml
 configMapGenerator:
-  - name: ai-library-config
+  - name: superset-custom-config
     envs:
       - params.env
 vars:
-  - name: YOUR_IMAGE
+  - name: SUPERSET_IMAGE
     objref:
-      name: superset-config
+      name: superset-custom-config
       kind: ConfigMap
       apiVersion: v1
     fieldref:
-      fieldpath: data.YOUR_IMAGE
+      fieldpath: data.SUPERSET_IMAGE
+  - name: SUPERSET_DB_IMAGE
+    objref:
+      name: superset-custom-config
+      kind: ConfigMap
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.SUPERSET_DB_IMAGE
