--- a/thriftserver/thriftserver/overlays/custom-image/params.env
+++ b/thriftserver/thriftserver/overlays/custom-image/params.env
@@ -1,1 +1,3 @@
-YOUR_IMAGE=none
+THRIFT_DB_EXPORTER_IMAGE=quay.io/internaldatahub/postgres_exporter:latest
+THRIFT_DB_IMAGE=registry.redhat.io/rhel8/postgresql-12:latest
+THRIFT_SERVER_IMAGE=quay.io/opendatahub/spark-cluster-image:2.4.3-h2.7
