--- a/trino/overlays/custom-image/params.env
+++ b/trino/overlays/custom-image/params.env
@@ -1,1 +1,3 @@
-YOUR_IMAGE=none
+TRINO_IMAGE=quay.io/opendatahub/trino:355
+TRINO_DB_IMAGE=registry.redhat.io/rhel8/postgresql-96:latest
+TRINO_HIVE_IMAGE=quay.io/cloudservices/ubi-hive:2.3.3-002
