disconnected-install: changes to the crd seldon operator

--- a/odhseldon/cluster/base/seldon-operator-crd-seldondeployments.yaml
+++ b/odhseldon/cluster/base/seldon-operator-crd-seldondeployments.yaml
@@ -22,7 +22,7 @@ spec:
     shortNames:
     - sdep
     singular: seldondeployment
-  preserveUnknownFields: true
+  #preserveUnknownFields: true
   scope: Namespaced
   versions:
   - name: v1
