disconnected-install: changes to the crd seldon deployment

--- a/odhseldon/cluster/base/kustomization.yaml
+++ b/odhseldon/cluster/base/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: opendatahub
+namespace: ml-workshop
 resources:
  - seldon-operator-clusterrole.yaml
  - seldon-operator-clusterrolebinding.yaml
