--- a/odhseldon/cluster/base/seldon-operator-clusterrolebinding.yaml
+++ b/odhseldon/cluster/base/seldon-operator-clusterrolebinding.yaml
@@ -3,7 +3,6 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     olm.owner: seldon-operator.v1.7.0
-    olm.owner.kind: ClusterServiceVersion
     operators.coreos.com/seldon-operator-certified.ml-workshop: ""
   name: seldon-operator.v1.7.0-clusterrolebinding
 roleRef:
@@ -13,4 +12,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: seldon-manager
-  # namespace: ml-workshop
+  namespace: pramod-test
