--- a/odh-main/base/odh-operator-clusterrolebinding.yaml
+++ b/odh-main/base/odh-operator-clusterrolebinding.yaml
@@ -2,10 +2,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    olm.owner: opendatahub-operator.v1.1.0
-    olm.owner.kind: ClusterServiceVersion
-    olm.owner.namespace: openshift-operators
-    operators.coreos.com/opendatahub-operator.openshift-operators: ""
   name: opendatahub-operator.v1.1.0-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -14,4 +10,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: opendatahub-operator
-  namespace: openshift-operators
+  namespace: anz-odh-operator
