--- a/jupyterhub/notebook-images/overlays/custom-image/kustomization.yaml
+++ b/jupyterhub/notebook-images/overlays/custom-image/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 bases:
   - ../../base
 patchesStrategicMerge:
-  - custom-image-dc.yaml
+  - custom-image-streams.yaml
 configurations:
   - params.yaml
 configMapGenerator:
